fixed list spacing

--- a/style/style.css
+++ b/style/style.css
@@ -11,8 +11,10 @@ a {
 
 li {
     list-style: none;
-    
+}
 
+ul {
+    padding-inline-start: 0px;
 }
 
 .image {
